package com.directi.training.ocp.exercise.solution;

public class SpaceResource extends Resource {

    public void markSlotFree(int resourceId)
    {
        return;
    }

    public void markSlotBusy(int resourceId)
    {
        return;
    }
    
}